// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`testDataSourceAdapter generates a default directive and optional types for fields with literal default values 1`] = `
"type Account @model {
  id: Int! @primaryKey
  serialNumber: Int @default(value: \\"-1\\")
  ownerName: String @default(value: \\"na\\")
  amount: Float @default(value: \\"101.101\\")
}
"
`;

exports[`testDataSourceAdapter generates optional type but no default directive for fields with computed default values 1`] = `
"type Account @model {
  id: Int! @primaryKey
  computed: Float
}
"
`;

exports[`testDataSourceAdapter test generate graphql schema from internal reprensentation 1`] = `
"type Capital @model {
  id: Int! @primaryKey
  name: String
  countryId: Int @index(name: \\"countryId\\")
}

type Country @model {
  id: Int! @primaryKey
  name: String
}

type Tasks @model {
  id: String! @primaryKey(sortKeyFields: [\\"title\\"])
  title: String @index(name: \\"tasks_title\\") @index(name: \\"tasks_title_description\\", sortKeyFields: [\\"description\\"])
  description: String
  priority: String
}
"
`;

exports[`testDataSourceAdapter test generate graphql schema on model with enum field 1`] = `
"enum Profile_type {
  Manager
  Employee
}

type Profile @model {
  id: Int! @primaryKey
  name: String
  type: Profile_type
}
"
`;
